# chatbox-tip-demo

./: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  Block.tsx  index.html  index.tsx  select.css  select.html  select.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: command.rs  main.rs  select.rs
src-tauri/src/easy_thing/: mod.rs
src-tauri/src/tauri_windows/: mod.rs  select.rs
src/theme/: ThemeSwitcher.tsx
